--- a/lang/ne.json
+++ b/lang/ne.json
@@ -1,4 +1,5 @@
 {
+    "Fill Form": "फरम भर्नुहोस्",
     "Contacts": "सम्पर्क",
     "Important Links": "महत्वपूर्ण लिंक",
     "Our Map": "हाम्रो नक्सा",
