--- a/lang/ne.json
+++ b/lang/ne.json
@@ -1,5 +1,6 @@
 {
-    "Fill Form": "फरम भर्नुहोस्",
+    "Fill Form": "फारम भर्नुहोस्",
+    "Proposal Forms":"प्रस्ताव फारमहरू",
     "Contacts": "सम्पर्क",
     "Important Links": "महत्वपूर्ण लिंक",
     "Our Map": "हाम्रो नक्सा",
